# lyh

./: .gitattributes  README.md
PCB/: STM32主控板.eprj
PCB/板框/: 板框.DXF
YOLOv8推理的验证代码/cpp/: CMakeLists.txt  main.cc  test_camera  yolo_detector.cc
YOLOv8推理的验证代码/cpp/rknpu2/: yolov8.cc
YOLOv8推理的验证代码/cpp/utils/: image_utils.c
convert/: README.md  convert.py  datasets.txt  export.py  generate.py
convert/yolov8s_falldown_75/: args.yaml  results.csv
convert/yolov8s_humanaction_250/: args.yaml  results.csv
cpp/: CMakeLists.txt  main.cc  postprocess.h  yolo_detector.h
cpp/rknpu2/: yolov8.h
cpp/utils/: image_utils.cc
esp8266/: use_selfwifi.cc
esp8266/esp8266-oled-mqtt-uart/: esp8266-oled-mqtt-uart.ino
rk3588lyh/: AGENTS.md  CMakeLists.txt  README.md  before.cc  before_test  config.yaml  simple_test  simple_test.cc
rk3588lyh/docs/superpowers/plans/: 2025-04-20-single-camera.md  2026-03-27-rk3588-streaming-mqtt-plan.md
rk3588lyh/docs/superpowers/specs/: 2026-03-27-rk3588-streaming-mqtt-design.md
rk3588lyh/src/: camera_capture_helper.cc  camera_manager.cc  camera_manager.h  camera_status.cc  camera_status.h  capture_thread.cc  capture_thread.h  common_types.h  global_running.h  main.cc  postprocess.cc  postprocess.h  publisher_thread.cc  publisher_thread.h  voice_capture_thread.cc  voice_capture_thread.h  yolo_detector.cc  yolo_detector.h  yolo_inference_thread.cc  yolo_inference_thread.h
rk3588lyh/src/rknpu2/: yolov8.cc  yolov8.h
rk3588lyh/tests/: check_single_process_capture.sh
rk3588lyh/utils/: image_convert.c
stm32/: AGENTS.md  README.md
stm32/STM32-BISHE/: .mxproject  STM32-BISHE.ioc
stm32/STM32-BISHE/Core/Inc/: Buzzer.h  Key.h  Led.h  Steering_Engine.h  font.h  main.h  oled.h  stm32f1xx_it.h  usart.h
stm32/STM32-BISHE/Core/Src/: Buzzer.c  Key.c  Led.c  Steering_Engine.c  freertos.c  gpio.c  main.c  oled.c  stm32f1xx_it.c  tim.c  usart.c
stm32/STM32-BISHE/MDK-ARM/: STM32-BISHE.uvguix.admin  STM32-BISHE.uvoptx  STM32-BISHE.uvprojx  startup_stm32f103xb.lst
stm32/STM32-BISHE/MDK-ARM/RTE/_STM32-BISHE/: RTE_Components.h
stm32/STM32-BISHE/MDK-ARM/STM32-BISHE/: STM32-BISHE.axf  STM32-BISHE.build_log.htm  STM32-BISHE.hex  STM32-BISHE.htm  STM32-BISHE.lnp  STM32-BISHE.map  STM32-BISHE_STM32-BISHE.dep  buzzer.crf  buzzer.d  cmsis_os2.crf  cmsis_os2.d  croutine.crf  croutine.d  event_groups.crf  event_groups.d  freertos.crf  freertos.d  gpio.crf  gpio.d  heap_4.crf  heap_4.d  i2c.crf  i2c.d  key.crf  key.d  led.crf  led.d  list.crf  list.d  main.crf  main.d  oled.crf  oled.d  port.crf  port.d  queue.crf  queue.d  startup_stm32f103xb.d  steering_engine.crf  steering_engine.d  (+48 more)
web/: AGENTS.md  README.md  add_admin.py  app.py  cameras.json  config.py  exts.py  requirements.txt  test_upload_capture.py
web/.superpowers/brainstorm/2295344-1774183208/: .server-info  architecture-design.html  design-options.html  ui-update.html
web/blueprints/: AGENTS.md  __init__.py  auth.py  capture.py  main.py  models.py  mqtt_manager.py  settings.py  user_management.py  video_stream.py
web/docs/superpowers/plans/: 2026-03-20-alarm-button-slide-out.md  2026-03-22-remote-intercom.md
web/docs/superpowers/specs/: 2026-03-16-settings-dashboard-design.md  2026-03-20-alarm-button-slide-out-design.md  2026-03-22-remote-intercom-design.md
web/static/css/: style.css
web/templates/: AGENTS.md  alerts.html  base.html  index.html  login.html  monitor.html  register.html  settings.html  user_index.html  user_management.html
